--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,12 @@
           </li>
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/similarity/">
-              <span class="secondary">Trade Ideas:</span> Similarity
+              <span class="secondary">Trade Ideas:</span> Similarity 1.0
+            </a>
+          </li>
+          <li class="page-contents__item">
+            <a class="page-contents__link" href="/pages/similarity?v=2">
+              <span class="secondary">Trade Ideas:</span> Similarity 2.0
             </a>
           </li>
           <li class="page-contents__item">
