--- a/src/pages/trade-ideas/filter-view.html
+++ b/src/pages/trade-ideas/filter-view.html
@@ -20,10 +20,10 @@
         <div id="metaData" class="meta-data"></div>
         <ol>
           <li>
-            <strong id="numIndexed"></strong> opportunities
+            <strong id="numIndexed"></strong> Katana grade
             <span class="highlight new-ideas"><span id="numNew"></span> new</span>
           </li>
-          <li><strong id="numIdeas"></strong> alternatives</li>
+          <li><strong id="numIdeas"></strong> Alternatives</li>
         </ol>
         <div class="filtersArea">
           <form id="filterForm" method="GET" action="/" class="FiltersForm"></form>
