--- a/src/pages/trade-ideas/index.html
+++ b/src/pages/trade-ideas/index.html
@@ -33,11 +33,10 @@
         <ul class="ideasSummary secondary">
           <li><strong>Today:</strong></li>
           <li>
-            <img class="center-vertically" src="/img/katana_logo_inIndex.png" />15 opportunities
-            <span class="highlight new-ideas">5 new</span>
+            <img class="center-vertically" src="/img/katana_logo_inIndex.png" /><abbr class="helper-tip" title="Katana grade ideas are those Katana's algorithm recognises as most likely to be mispriced, and on which the Katana Index performance is measured.">15 Katana grade</abbr>
+            <abbr class="highlight new-ideas helper-tip" title="Katana grade ideas generated as of the previous day.">5 new</abbr>
           </li>
-          <li>37,471 alternatives</li>
-          <li>37,486 total relevant pairs</li>
+          <li>37,471 <abbr class="helper-tip" title="Alternative ideas are those with a lower probability of mean-reversion.">Alternatives</abbr></li>
         </ul>
         <div class="filtersArea">
           <form id="filterForm" method="GET" action="/" class="FiltersForm"></form>
