Add search and rename prototypes

--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,21 @@
         <ol class="page-contents__list">
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/trade-ideas/">
-              <span class="secondary">Trade Ideas:</span> Saved Filters
+              Prototype A
             </a>
           </li>
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/similarity/">
-              <span class="secondary">Trade Ideas:</span> Similarity 1.0
+              Prototype B1
             </a>
-          </li>
-          <li class="page-contents__item">
+            /
             <a class="page-contents__link" href="/pages/similarity?v=2">
-              <span class="secondary">Trade Ideas:</span> Similarity 2.0
+              Prototype B2
             </a>
           </li>
           <li class="page-contents__item">
             <a class="page-contents__link" href="/pages/monitor/">
-              <span class="secondary">Monitor:</span> New Section
+              Prototype C
             </a>
           </li>
         </ol>
