--- a/src/pages/monitor/monitor-view.html
+++ b/src/pages/monitor/monitor-view.html
@@ -11,6 +11,9 @@
     <div class="artboard" id="monitor">
       <nav id="main-nav"></nav>
       <div class="view">
+        <div class="search-bar">
+          <input class="search-bar__input" placeholder="Search ISIN, issuer or country">
+        </div>
         <h1><span id="bondName"></span></h1>
         <div class="tradeIdeas_table"></div>
       </div>
