--- a/src/pages/similarity/index.html
+++ b/src/pages/similarity/index.html
@@ -11,6 +11,9 @@
     <div class="artboard" id="tradeIdeas">
       <nav id="main-nav"></nav>
       <div class="view" id="similarity">
+        <div class="search-bar">
+          <input class="search-bar__input" placeholder="Search ISIN, issuer or country">
+        </div>
         <h1>Trade Ideas</h1>
         <div class="filtersArea">
           <form id="filterForm" method="GET" action="/" class="FiltersForm"></form>
