--- a/src/pages/trade-ideas/filter-view.html
+++ b/src/pages/trade-ideas/filter-view.html
@@ -11,6 +11,9 @@
     <div class="artboard" id="filterView">
       <nav id="main-nav"></nav>
       <div class="view">
+        <div class="search-bar">
+          <input class="search-bar__input" placeholder="Search ISIN, issuer or country">
+        </div>
         <div class="optionsBar">
           <button id="deleteFilter" class="Button Button--empty Button--tertiary Button--link">
             <i class="fas fa-trash-alt"></i>
