--- a/src/pages/monitor/index.html
+++ b/src/pages/monitor/index.html
@@ -11,6 +11,9 @@
     <div class="artboard" id="monitor">
       <nav id="main-nav"></nav>
       <div class="view">
+        <div class="search-bar">
+          <input class="search-bar__input" placeholder="Search ISIN, issuer or country">
+        </div>
         <h1>Monitor</h1>
         <form>
           <label for="isin">ISIN</label>
