Fix empty saved message

--- a/src/pages/trade-ideas/index.html
+++ b/src/pages/trade-ideas/index.html
@@ -30,14 +30,15 @@
           </h3>
 
           <div class="savedFilters__body">
-            <p id="noSavedFilters"></p>
-            <h3>Create your first filter</h3>
-            <p class="secondary">
-              Filter the ideas table below to find ideas that match your
-              investment strategy and hit save. You'll not only have faster
-              access to those ideas, but Katana will also let you know when new
-              ideas that match each filter appear each day.
-            </p>
+            <div id="noSavedFilters">
+              <h3>Create your first filter</h3>
+              <p class="secondary">
+                Filter the ideas table below to find ideas that match your
+                investment strategy and hit save. You'll not only have faster
+                access to those ideas, but Katana will also let you know when new
+                ideas that match each filter appear each day.
+              </p>
+            </div>
 
             <div id="SavedFilterList" class="filterCard_grid"></div>
           </div>
